test/testData/highlight/errors/unbound/constructor.ml
type t = ..;;
type t +=
Foo = Foobar;;

(* Unbound constructor Foobar *)